--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,20 @@ version: '3'
 
 services:
   steam-downloader:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "7860:7860"
     environment:
-      - PORT=7860
-      - STEAM_LIBRARY_PATH=/data/steamlibrary
+      - STEAM_DOWNLOAD_PATH=/data/downloads
     volumes:
-      - steam-data:/data/steamlibrary
-      - ./logs:/app/logs
+      - steam-downloads:/data/downloads
+      - steam-cmd:/app/steamcmd
+    restart: unless-stopped
 
 volumes:
-  steam-data:
+  steam-downloads:
+    driver: local
+  steam-cmd:
     driver: local
