--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - STEAM_DOWNLOAD_PATH=/data/downloads
       - LOG_LEVEL=INFO
+      - SERVER_NAME=0.0.0.0
     volumes:
       - steam-downloads:/data/downloads
       - steam-cmd:/app/steamcmd
