--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "nixpacks"
+command = "pip install -r requirements.txt && python main.py"
 
 [deploy]
 startCommand = "python main.py"
@@ -8,8 +9,11 @@ healthcheckTimeout = 10
 restartPolicyType = "on-failure"
 
 [environments]
-PORT = "7860"
-HEALTH_PORT = "7861"
+PORT = 7860
+HEALTH_PORT = 7861
 STEAM_DOWNLOAD_PATH = "/data/downloads"
 LOG_LEVEL = "INFO"
 SERVER_NAME = "0.0.0.0"
+
+[service]
+port = 7860
