--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,25 +6,22 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "7860:7860"  # Main application port
-      - "7861:7861"  # Health check port
+      - "7860:7860"
     environment:
       - STEAM_DOWNLOAD_PATH=/data/downloads
       - LOG_LEVEL=INFO
       - SERVER_NAME=0.0.0.0
-      - PORT=7860
-      - HEALTH_PORT=7861
     volumes:
-      - steam-downloads:/data/downloads  # Persistent storage for downloads
-      - steam-cmd:/app/steamcmd          # Persistent storage for SteamCMD
-      - ./logs:/app/logs                  # Mount host logs directory
+      - steam-downloads:/data/downloads
+      - steam-cmd:/app/steamcmd
+      - ./logs:/app/logs
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7861/"]  # Health check endpoint
+      test: ["CMD", "curl", "-f", "http://localhost:7860"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s  # Time to wait before starting health checks
+      start_period: 40s
 
 volumes:
   steam-downloads:
